@@ -1,10 +1,8 @@
 1.0beta12:
 
-BUGS
  - trigger key cannot contain dash
  - no way to delete or rename host group
  - update item does not work (multiplier)
- - timestamp for maps
  - change %s to {HOSTNAME}, {DATE},{TIME}, etc
  - add zabbix[unixtime] and lastupdate() to get rid of nodata()
  - check return code for alert scripts
