@@ -1,5 +1,6 @@
 Changes for 1.0beta13:
 
+ - added timestamp and header to maps (Alexei)
  - fixes for screens.php (Alexei)
  - fixes for screenedit.php (Alexei)
  - added parameter DisablePinger (Alexei)
